<resources>
    <string name="app_name">钢卷扫描</string>
    <string name="title_import">导入识别</string>
    <string name="title_collection">直接采集</string>
    <string name="title_detail">船 %s 明细</string>
    <string name="title_error_detail">船 %s 失败明细</string>
    <string name="text_ship_no">船号</string>
    <string name="text_import_file">导入文件</string>
    <string name="text_view_error">失败明细</string>
    <string name="text_view_detail">查看明细</string>
    <string name="hint_barcode_edit">输入钢卷号</string>
    <string name="title_save">保存</string>
    <string name="message_save_success">保存成功</string>
    <string name="message_save_error">钢卷号不存在</string>
    <string name="message_delete_success">删除成功</string>
    <string name="message_import_success">导入成功</string>
    <string name="message_export_success">导出成功</string>
    <string name="message_delete_alert">确认删除所有数据吗？</string>
    <string-array name="ship_no_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="text_export">导出</string>
    <string name="text_delete">删除</string>
    <string name="text_status">状态</string>
    <string name="text_not_scanned">未扫描</string>
    <string name="text_scanned">已扫描</string>
    <string name="text_ok">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_search">搜索</string>
    <string name="text_all">全部</string>
    <string name="text_no_data">没有数据</string>
    <string name="text_created_at">创建时间</string>
    <string name="text_updated_at">扫描时间</string>
    <string name="text_pile_no">货垛号</string>
    <string name="text_thickness">厚度</string>
    <string name="text_weight">重量</string>
    <string name="text_mark">标记</string>
    <string name="title_search">搜索</string>
    <string name="text_barcode_not_existed">钢卷号不存在</string>
    <string name="text_welcome">首钢欢迎您</string>
</resources>
