<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.powerdata.barcode.viewModel.BarcodeCollectionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.fragment.BarcodeCollectionFragment">

        <TextView
            android:id="@+id/ship_no_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ship_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/ship_no_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:entries="@array/ship_no_array"
            app:layout_constraintBottom_toBottomOf="@+id/ship_no_text_view"
            app:layout_constraintStart_toEndOf="@+id/ship_no_text_view"
            app:layout_constraintTop_toTopOf="@+id/ship_no_text_view" />

        <EditText
            android:id="@+id/barcode_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/hint_barcode_edit"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={viewModel.barcode}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ship_no_text_view" />

        <Button
            android:id="@+id/view_detail_button"
            style="@style/AppTheme.Button.Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_action_details"
            android:text="@string/text_view_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>